--- a/src/app/components/playlist-list/playlist-list.component.html
+++ b/src/app/components/playlist-list/playlist-list.component.html
@@ -1,7 +1,7 @@
 <!-- playlist-list.component.html -->
 
 <div>
-    <h2>Playlists</h2>
+    <h2>Lista de Músicas</h2>
     <div *ngFor="let playlist of playlists">
       <h3>{{ playlist.nome }}</h3>
       <p>{{ playlist.descricao }}</p>
