--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 h1 {
     text-align: center;
     margin-top: 20px;
-    color: #FE6613; /* Cor laranja */
+    color: #1be68e; /* Cor laranja */
     font-size: 24px;
     font-weight: bold;
   }
@@ -26,7 +26,7 @@ h1 {
     display: block;
     margin: 10px auto;
     padding: 10px 20px;
-    background-color: #FE6613;
+    background-color: #1be68e;
     color: white;
     border: none;
     border-radius: 4px;
@@ -81,6 +81,6 @@ h1 {
   body {
     padding: 20px;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #121212;
   }
   
