--- a/src/app/components/playlist-list/playlist-list.component.html
+++ b/src/app/components/playlist-list/playlist-list.component.html
@@ -15,18 +15,19 @@
 <input [(ngModel)]="newMusic.artista" placeholder="Artista">
 <button (click)="addMusic()">Adicionar Música</button>
 
-
 <hr>
 
 <!-- Listar Playlists -->
-<div *ngFor="let playlist of playlists">
-  <h3>{{ playlist.nome }} ({{ playlist.descricao }})</h3>
+<div *ngFor="let playlist of playlists" class="playlist-container">
+  <div class="playlist-header">
+    <h3>{{ playlist.nome }} ({{ playlist.descricao }})</h3>
+    <button class="delete-button delete-button-playlist" (click)="deletePlaylist(playlist.id)">Deletar Playlist</button>
+  </div>
   
-  <ul>
-    <li *ngFor="let music of playlist.musicas">
-      {{ music.titulo }} - {{ music.artista }}
-      <!-- Botão para deletar música passando o id da música -->
-      <button (click)="deleteMusic(music.id)">Deletar Música</button>
+  <ul class="music-list">
+    <li *ngFor="let music of playlist.musicas" class="music-item">
+      <span class="music-title">{{ music.titulo }} - {{ music.artista }}</span>
+      <button class="delete-button delete-button-music" (click)="deleteMusic(music.id)">Deletar Música</button>
     </li>
   </ul>
 </div>
